# Proyecto0

./: DockerfileBack  DockerfileFront  README.md  docker-compose.yml  pyproject.toml
api/: app.py
api/config/: __init__.py  connect_db.py
api/models/: __init__.py  category.py  task.py  user.py
api/routers/: __init__.py  category_router.py  task_router.py  user_router.py
api/schema/: __init__.py  category_schema.py  task_schema.py  user_schema.py
db/: categories.sql  create_database.py  tasks.sql  users.sql
frontend/my-app/: package-lock.json  package.json
frontend/my-app/src/: App.jsx
frontend/my-app/src/components/category_form/: __category_form.scss  category_form.jsx
frontend/my-app/src/components/navbar/: __navbar.scss  navbar.jsx
frontend/my-app/src/components/sidebar/: __sidebar.scss  sidebar.jsx
frontend/my-app/src/components/task_form/: __task_form.scss  task_form.jsx
frontend/my-app/src/components/task_list/: __task_list.scss  task_list.jsx
frontend/my-app/src/pages/login/: __login.scss  login.jsx
frontend/my-app/src/pages/profile/: __profile.scss  profile.jsx
frontend/my-app/src/pages/task_dashboard/: __task_dashboard.scss  task_dashboard.jsx
frontend/my-app/src/services/: tasks.js
frontend/my-app/src/styles/: _mixins.scss  _variables.scss  main.scss
